--- a/src/style/responsive/xs/_section-header.scss
+++ b/src/style/responsive/xs/_section-header.scss
@@ -11,7 +11,7 @@
         }
 
         &--primary{
-            font: 60px 'montserrat';
+            font: 50px 'montserrat';
             font-weight: bold;
             line-height: 55px;
             margin: 0 0 80px 0;
@@ -59,6 +59,10 @@
 
         &__text{
             font-size: 12px;
+        }
+
+        &__name {
+            display: none;
         }
     }
 }
