--- a/src/style/sections/_header.scss
+++ b/src/style/sections/_header.scss
@@ -3,10 +3,12 @@
     $header-hover-color: #fce38a;
 
     height: 100vh;
-    max-height: 100%;
-    max-height: 100vh;
     position: relative;
     color: #fff;
+
+    @media screen and (max-height: 540px) {
+        height: auto;
+    }
 
     a{
         color: unset;
@@ -57,6 +59,9 @@
     }
 
     .header__content{
+        display: flex;
+        flex-flow: column;
+        justify-content: space-between;
         overflow: hidden;
         position: relative;
         height: 100%;
@@ -146,9 +151,8 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            margin-top: 50px;
+            margin: 20px 0;
             overflow: visible;
-            padding-bottom: 10px;
         }
 
         &--primary{
@@ -206,10 +210,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            position: absolute;
             width: 100%;
-            bottom: 0;
-            left: 0;
             margin-bottom: 25px;
         }
 
